location.bnf
<expr> ::= [ <agents> ] { <mapping> }

<agents> ::= "@" [ "@" { <atom> "@" } ]
    | <atom> "@" { <atom> "@" }

<mapping> ::= { "." } "." <assignment>
    | { "." } "{" <assignments> "}"
    | { "." } "(" <assignments> { "," <assignments> } ")"
    | { "." } "[" <assignments> { "," <assignments> } "]"

<assignments> ::= <assignment> { "&" <assignment> }

<assignment> ::= <slice> [ "=" <slice> ]

<slice> ::= [ <atom> ] ":" [ <atom> ] [ ":" [ <atom> ] ]
    | <atom>

<atom> ::= ( NAME | STRING | INTEGER )

NAME ::= [A-Za-z_][A-Za-z0-9_]*

STRING ::= DOUBLE_QUOTED_STRING | SINGLE_QUOTED_STRING

INTEGER ::= [+-]?(\d+)
